# Algoritmos-y-Estructura-de-Datos

./: README.md
ForExam/: CMakeLists.txt  ejerciciosParcial.cpp  ejerciciosParcial.h  main.cpp  test.cpp  test.h
ForExam/Resumenes/: index.tex
ForExam/complexity/: complex.cpp  complex.h
ForExam/files/: auxiliares.cpp  auxiliares.h  ejerciciosParcial.cpp  ejerciciosParcial.h  matrices.cpp  matrices.h
ForExam/sort/: sortAlgorithm.cpp  sortAlgorithm.h
Labos/Labo01/: CMakeLists.txt  ejercicios.cpp  main.cpp
Labos/Labo03/: CMakeLists.txt  class_2.cpp  class_2.h  class_3.cpp  class_3.h  main.cpp
Labos/Labo04/: CMakeLists.txt  main.cpp
Labos/Labo05/: CMakeLists.txt  main.cpp
Practica - Torica/Practica07_Teorica/: CMakeLists.txt
Practica - Torica/Practica09_Teorica/: CMakeLists.txt  main.cpp
Practica/Laboratorio/Clase 8 Complejidad/Ejercicios/: backup version anteriorrar.rar  datos.csv  ejercicios.cpp
Practica/Laboratorio/Practica_1/: recursion.cpp
Practica/Laboratorio/Practica_3/: CMakeLists.txt  funciones.h
Practica/Laboratorio/Practica_4/: ejercicios.cpp
Practica/Laboratorio/Practica_4/archivos/: estadisticas.txt
Practica/Laboratorio/Practica_6/Terminal/L07-MatricesYTableros/src/: solucion.cpp
Practica/Laboratorio/Practica_7/src/: sandia.cpp
Practica/Laboratorio/Practica_7/test/: filasQueSumanTEST.cpp
Practica/Laboratorio/Practica_8/: ejercicios.cpp
Practica/Laboratorio/TallerString/: CMakeLists.txt
Practica/Teoria/Practica09_Teorica/: CMakeLists.txt
Practica07_Teorica/: main.cpp
Practicas - Laboratorio/Clase 8 Complejidad/Ejercicios/: main.cpp
Practicas - Laboratorio/Practica_1/: CMakeLists.txt
Practicas - Laboratorio/Practica_3/: main.cpp
Practicas - Laboratorio/Practica_4/: CMakeLists.txt  main.cpp
Practicas - Laboratorio/Practica_4/archivos/: palabras.txt  palindromos.txt  promedios2.txt
Practicas - Laboratorio/Practica_5/: main.cpp
Practicas - Laboratorio/Practica_6/CLion/L07-MatricesYTableros/: CMakeLists.txt  main.cpp
Practicas - Laboratorio/Practica_6/Terminal/L07-MatricesYTableros/: CMakeLists.txt  main.cpp
Practicas - Laboratorio/Practica_7/: CMakeLists.txt
Practicas - Laboratorio/Practica_7/src/: aTriplas.cpp  sopaDeLetras.cpp
Practicas - Laboratorio/Practica_7/test/: esPrimoTEST.cpp
Practicas - Laboratorio/Practica_8/: main.cpp
Practicas - Laboratorio/TallerString/: main.cpp
Practicas/Practica_1/: CMakeLists.txt  main.cpp  recursion.cpp  recursion.h
Practicas/Practica_3/: funciones.cpp
Practicas/Practica_4/: ejercicios.h
Practicas/Practica_4/archivos/: apariciones.txt  interseccion1.txt  interseccion2.txt  promedios1.txt
Practicas/Practica_5/: CMakeLists.txt  ejercicios.cpp
Practicas/Practica_6/CLion/L07-MatricesYTableros/src/: solucion.cpp  solucion.h
Practicas/Practica_6/Terminal/L07-MatricesYTableros/src/: solucion.cpp  solucion.h
Practicas/Practica_7/src/: aTriplas.h  contarPicos.cpp  contarPicos.h  filasQueSuman.cpp  filasQueSuman.h  puntaje.cpp  sopaDeLetras.cpp  sopaDeLetras.h
Practicas/Practica_7/test/: aTriplasTEST.cpp  contarPicosTEST.cpp  puntajeTEST.cpp  sandiaTEST.cpp  sopaDeLetrasTEST.cpp
Practicas/Practica_8/: datos.csv  ejercicios.cpp  main.cpp
Resumenes/: last.tex
Sandbox/: CMakeLists.txt  main.cpp
TPS/Trabajo Implementacion/: CMakeLists.txt  auxiliares.cpp  auxiliares.h  definiciones.h  ejercicios.cpp  ejercicios.h  main.cpp
TPS/Trabajo Implementacion/tests/: EJ01_toroideValidoTEST.cpp  EJ02_toroideMuertoTEST.cpp  EJ03_posicionesVivasTEST.cpp  EJ04_densidadPoblacionTEST.cpp  EJ05_cantidadVecinosVivosTEST.cpp  EJ06_evolucionDePosicionTEST.cpp  EJ07_evolucionToroideTEST.cpp  EJ08_evolucionMultipleTEST.cpp  EJ09_esPeriodicoTEST.cpp  EJ10_primosLejanosTEST.cpp  EJ11_seleccionNaturalTEST.cpp  EJ12_fusionarTEST.cpp  EJ13_vistaTrasladadaTEST.cpp  EJ14_menorSuperficieVivaTEST.cpp
