cmake_minimum_required(VERSION 3.17)
project(Practica09_Teorica)

set(CMAKE_CXX_STANDARD 14)

add_executable(Practica09_Teorica
        .idea/.gitignore
        .idea/misc.xml
        .idea/modules.xml
        .idea/Practica09_Teorica.iml
        .idea/vcs.xml
        .idea/workspace.xml
        cmake-build-debug/cmake_install.cmake
        cmake-build-debug/CMakeCache.txt
        cmake-build-debug/Makefile
        cmake-build-debug/Practica09_Teorica.cbp
        CMakeLists.txt
        main.cpp)
